--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
@@ -43,7 +43,7 @@
         <span class="pl-1 text-white">Add to cart</span>
       </button>
       <button
-        class="btn btn-secondary d-flex align-items-center justify-content-center w-100 add-to-wishlist-btn ml-2"
+        class="btn d-flex align-items-center justify-content-center w-100 add-to-wishlist-btn ml-2"
       >
         <img src="/assets/icons/wishlist-heart.svg" />
         <span class="pl-1">Add to wishlist</span>
