--- a/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
@@ -24,6 +24,11 @@ $container-bg: #373f50;
   .subTagline {
     position: absolute;
     top: 12.5rem;
+  }
+  .subTaglineCenter {
     left: 39.7rem;
+  }
+  .subTaglineLeft {
+    left: 20.4rem;
   }
 }
