--- a/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
@@ -9,7 +9,7 @@
         />
       </td>
       <td class="phone-desc-td">
-        <p class="p-0 m-0 mt-2 phone-name" (click)="openPhoneDetails(wishlistItem)">
+        <p class="p-0 m-0 mt-2 phone-name w-auto" (click)="openPhoneDetails(wishlistItem)">
           {{ wishlistItem.brandName }}-{{ wishlistItem.modelName }}
         </p>
         <p class="p-0 m-0 price">
