--- a/Frontend/shreeji-shop/src/styles.scss
+++ b/Frontend/shreeji-shop/src/styles.scss
@@ -10,12 +10,8 @@
   font-weight: 500;
 }
 
-.h-fit-content {
-  height: fit-content;
-}
-
-.visibility-visible {
-  visibility: visible !important;
+.text-muted {
+  color: #7d879c !important;
 }
 
 .visibility-hidden {
