--- a/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.html
@@ -9,7 +9,7 @@
         />
       </td>
       <td class="phone-desc-td">
-        <p class="p-0 m-0 mt-2 phone-name" (click)="openPhoneDetails(cartItem)">
+        <p class="p-0 m-0 mt-2 phone-name w-auto" (click)="openPhoneDetails(cartItem)">
           {{ cartItem.brandName }}-{{ cartItem.modelName }}
         </p>
         <p class="p-0 m-0 price">
