--- a/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.html
@@ -9,11 +9,14 @@
         />
       </td>
       <td class="phone-desc-td">
-        <p class="p-0 m-0 mt-2 phone-name w-auto" (click)="openPhoneDetails(cartItem)">
+        <p
+          class="p-0 m-0 mt-2 phone-name w-auto"
+          (click)="openPhoneDetails(cartItem)"
+        >
           {{ cartItem.brandName }}-{{ cartItem.modelName }}
         </p>
         <p class="p-0 m-0 price">
-          Rs.{{ getConvertedPrice(cartItem.priceEur) }}
+          {{ cartItem.priceEur * getCurrentINRValue() | currency: "INR" }}
         </p>
       </td>
       <td class="remove-phone-td">
