--- a/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
@@ -9,11 +9,14 @@
         />
       </td>
       <td class="phone-desc-td">
-        <p class="p-0 m-0 mt-2 phone-name w-auto" (click)="openPhoneDetails(wishlistItem)">
+        <p
+          class="p-0 m-0 mt-2 phone-name w-auto"
+          (click)="openPhoneDetails(wishlistItem)"
+        >
           {{ wishlistItem.brandName }}-{{ wishlistItem.modelName }}
         </p>
         <p class="p-0 m-0 price">
-          Rs.{{ getConvertedPrice(wishlistItem.priceEur) }}
+          {{ wishlistItem.priceEur * getCurrentINRValue() | currency: "INR" }}
         </p>
       </td>
       <td class="remove-phone-td">
