--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
@@ -10,7 +10,7 @@
           <img src="/assets/icons/wishlist-heart.svg" />
         </button>
         <div (click)="openPhoneDetails(p)">
-          <img [src]="p.imgUrl" [alt]="p.name" class="phone-image" />
+          <img [src]="p.imgUrl" (error)="pictNotLoading($event)" [alt]="p.name" class="phone-image" />
           <p class="p-0 m-0 mt-2 phone-name">{{ p.brandName }}-{{ p.name }}</p>
           <p class="p-0 m-0 price">
             {{ p.priceEur * getCurrentINRValue() | currency: "INR" }}
