pagination css and header option changes

--- a/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
@@ -2,8 +2,8 @@
   *ngIf="page.totalPage > 0"
   class="border-top mt-4 pt-3 d-flex align-items-center"
 >
-  <p>Page {{ currentPage + 1 }} of {{ page.totalPage + 1 }}</p>
-  <nav>
+  <p class="pagination-message">Page {{ currentPage + 1 }} of {{ page.totalPage + 1 }}</p>
+  <nav class="ml-auto">
     <ul class="pagination">
       <li
         class="page-item mr-3"
