--- a/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.scss
@@ -1,6 +1,4 @@
-$price-color: #4e54c8;
-$name-color: #373f50;
-$custom-orange: #fe696a;
+@import "../../../../assets/css/variables";
 
 .table {
   .phone-image-td {
