--- a/Frontend/shreeji-shop/src/app/components/checkout/checkout.component.html
+++ b/Frontend/shreeji-shop/src/app/components/checkout/checkout.component.html
@@ -122,7 +122,7 @@
           <span class="pl-2 text-white">Place order</span>
         </button>
         <button
-          class="btn add-to-wishlist-btn d-flex align-items-center justify-content-center p-2 ml-2"
+          class="btn checkout-cancel-btn d-flex align-items-center justify-content-center p-2 ml-2"
           (click)="cancel()"
         >
           <img src="/assets/icons/x-cancel.svg" />
