--- a/Frontend/shreeji-shop/src/app/components/checkout/checkout.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/checkout/checkout.component.scss
@@ -1,12 +1,11 @@
-$box-shadow: 0 0.3rem 1.525rem -0.375rem rgba(0, 0, 0, 0.1);
-$price-color: #4e54c8;
+@import "../../../assets/css/variables";
 
 .all-filters-container {
   position: sticky;
   top: 5.5rem;
   z-index: 10;
-  box-shadow: $box-shadow;
-  border-radius: 0.4375rem;
+  box-shadow: $modal-box-shadow;
+  border-radius: $border-radius;
   margin-top: -4.1rem;
 }
 .order-summary,
@@ -19,10 +18,10 @@ $price-color: #4e54c8;
   font-size: 0.8rem;
 }
 .total-wrapper {
-  color: #4b566b;
+  color: $auth-tab-color;
 }
 .phone-name {
-  color: #373f50;
+  color: $name-color;
 }
 .price {
   color: $price-color;
@@ -60,24 +59,24 @@ $price-color: #4e54c8;
     grid-template-columns: repeat(2, 1fr);
 
     .btn-theme,
-    .add-to-wishlist-btn {
+    .checkout-cancel-btn {
       font-size: 1rem;
       border-radius: 0.2rem;
       border: none;
-      transition: all 0.2s ease;
+      transition: $transition-ease;
     }
     .btn-theme {
-      background-color: #fe696a;
-      box-shadow: 0 0.5rem 1.125rem -0.5rem rgb(254 105 106 / 90%);
+      background-color: $custom-orange;
+      box-shadow: $theme-btn-box-shadow;
       &:hover {
-        background-color: #ff4142;
+        background-color: $custom-orange-dark;
         box-shadow: none;
       }
     }
-    .add-to-wishlist-btn {
-      background-color: #f8f9fa;
+    .checkout-cancel-btn {
+      background-color: $light-bg-color;
       color: #000;
-      box-shadow: 0 0.5rem 1.125rem -0.5rem #5a62686e;
+      box-shadow: $checkout-cancel-btn-box-shadow;
       &:hover {
         box-shadow: none;
       }
