--- a/Frontend/shreeji-shop/src/app/components/header/header.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/header/header.component.scss
@@ -1,3 +1,4 @@
+@import "../../../assets/css/variables";
 .header-top {
   justify-content: space-between;
 }
@@ -29,7 +30,7 @@ a {
     top: 5rem;
     width: 10rem;
     box-shadow: 0 1px 10px rgb(0 0 0 / 8%);
-    background-color: #f8f9fa;
+    background-color: $light-bg-color;
     border-bottom-left-radius: 0.2rem;
     border-bottom-right-radius: 0.2rem;
     transition: opacity 0.2s ease-out, visibility 0.2s ease-out;
@@ -38,7 +39,7 @@ a {
       position: absolute;
       top: -1rem;
       right: 4.5rem;
-      border: 8px solid #373f50;
+      border: 8px solid $name-color;
       border-right-color: transparent;
       border-top-color: transparent;
       border-left-color: transparent;
@@ -62,9 +63,9 @@ a {
       width: 100%;
       font-weight: 500;
       letter-spacing: 0.6px;
-      color: #fe696a;
+      color: $custom-orange;
       transition: border 0.2s ease-out;
-      border: 1px solid #fe696a;
+      border: 1px solid $custom-orange;
     }
   }
   img.action-icon {
