--- a/Frontend/shreeji-shop/src/app/components/home/home.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.scss
@@ -1,10 +1,10 @@
-$box-shadow: 0 0.3rem 1.525rem -0.375rem rgba(0, 0, 0, 0.1);
+@import "../../../assets/css/variables";
 
 .all-filters-container {
   position: sticky;
   top: 5.5rem;
   z-index: 10;
-  box-shadow: $box-shadow;
-  border-radius: 0.4375rem;
+  box-shadow: $modal-box-shadow;
+  border-radius: $border-radius;
   margin-top: -4.1rem;
 }
