--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -1,13 +1,9 @@
-$brand-name-color: #282c3f;
-$phone-name-color: #535665;
-$box-shadow: rgba(0, 0, 0, 0.1);
-$price-color: #4e54c8;
-$button-bg-color: #fe696a;
+@import "../../../assets/css/variables";
 
 .phone-detail-container {
   margin-top: -4rem;
-  box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
-  border-radius: 0.4375rem;
+  box-shadow: $modal-box-shadow;
+  border-radius: $border-radius;
 }
 img.phone-image {
   max-height: 25rem;
@@ -27,16 +23,11 @@ img.phone-image {
   line-height: 1;
 }
 .phone-name {
-  color: $phone-name-color;
+  color: $name-color;
   padding: 5px 20px 14px 0;
   font-size: 20px;
   opacity: 0.8;
   font-weight: 400;
-}
-.txt-green {
-  color: #03a685;
-  font-weight: 500;
-  font-size: 14px;
 }
 .add-to-cart-btn,
 .add-to-wishlist-btn {
@@ -44,21 +35,21 @@ img.phone-image {
   font-size: 1rem;
   border-radius: 0.2rem;
   border: none;
-  transition: all 0.2s ease;
+  transition: $transition-ease;
 }
 .add-to-cart-btn:hover,
 .add-to-wishlist-btn:hover {
   box-shadow: none;
 }
 .add-to-cart-btn {
-  background-color: $button-bg-color;
-  box-shadow: 0 0.5rem 1.125rem -0.5rem rgba(254, 105, 106, 0.9);
+  background-color: $custom-orange;
+  box-shadow: $theme-btn-box-shadow
 }
 .add-to-cart-btn:hover {
-  background-color: #ff4142;
+  background-color: $custom-orange-dark;
 }
 .add-to-wishlist-btn {
-  background-color: #f8f9fa;
+  background-color: $light-bg-color;
   color: #000;
   box-shadow: 0 0.5rem 1.125rem -0.5rem #5a62686e;
 }
