--- a/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/user-action/cart/cart.component.scss
@@ -1,6 +1,4 @@
-$price-color: #4e54c8;
-$name-color: #373f50;
-$custom-orange: #fe696a;
+@import "../../../../assets/css/variables";
 
 .table {
   .phone-image-td {
@@ -53,13 +51,13 @@ $custom-orange: #fe696a;
       font-size: 1rem;
       border-radius: 0.2rem;
       border: none;
-      transition: all 0.2s ease;
+      transition: $transition-ease;
       background-color: $custom-orange;
-      box-shadow: 0 0.5rem 1.125rem -0.5rem rgba(254, 105, 106, 0.9);
+      box-shadow: $theme-btn-box-shadow
     }
     .add-to-cart-btn:hover {
       box-shadow: none;
-      background-color: #ff4142;
+      background-color: $custom-orange-dark;
     }
   }
 }
