--- a/Frontend/shreeji-shop/src/app/components/user-action/user-action.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/user-action/user-action.component.scss
@@ -1,12 +1,11 @@
-$box-shadow: 0 0.3rem 1.525rem -0.375rem rgba(0, 0, 0, 0.1);
-$custom-orange: #fe696a;
+@import "../../../assets/css/variables";
 
 .all-filters-container {
   position: sticky;
   top: 5.5rem;
   z-index: 10;
-  box-shadow: $box-shadow;
-  border-radius: 0.4375rem;
+  box-shadow: $modal-box-shadow;
+  border-radius: $border-radius;
   margin-top: -4.1rem;
 
   .heading {
@@ -19,13 +18,13 @@ $custom-orange: #fe696a;
     font-size: 0.875rem;
   }
   .user-email {
-    color: #4e54c8;
+    color: $price-color;
   }
   .action-group-wrapper {
     background-color: #f6f9fc;
 
     .action-group-heading {
-      color: #7d879c;
+      color: $muted-text-color;
     }
   }
   .action-item {
