progress message for wishlist changes

--- a/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
@@ -1,3 +1,4 @@
+<span #progressSpan class="small pb-2 visibility-hidden" id="progress-span"></span>
 <table class="table" *ngIf="wishlistItems?.length > 0; else emptyWishlist">
   <tbody>
     <tr *ngFor="let wishlistItem of wishlistItems; let i = index">
